[gd_scene load_steps=6 format=2]

[ext_resource path="res://square.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Transition.gd" type="Script" id=2]
[ext_resource path="res://triangle.png" type="Texture" id=3]
[ext_resource path="res://Edit_icon.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.1905, 32.1981 )

[node name="Transition" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.552941, 1, 0.988235, 1 )
position = Vector2( 0.176773, 0 )
scale = Vector2( 0.320514, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -24.6516
margin_top = -50.6464
margin_right = 25.3484
margin_bottom = -36.6464
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position In" type="Position2D" parent="."]
position = Vector2( -18.5724, 12.0028 )

[node name="Position Out" type="Position2D" parent="."]
position = Vector2( -10.0763, -12.9047 )

[node name="Position In2" type="Position2D" parent="."]
position = Vector2( 18.7747, 11.9377 )

[node name="Position Out2" type="Position2D" parent="."]
position = Vector2( 10.4298, -13.0815 )

[node name="t1" type="Sprite" parent="."]
visible = false
modulate = Color( 0.4, 0.501961, 1, 1 )
position = Vector2( -14.2109, 11.625 )
scale = Vector2( 0.0538061, 0.0763281 )
texture = ExtResource( 3 )

[node name="t2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.4, 0.501961, 1, 1 )
position = Vector2( 14.4331, 11.8123 )
scale = Vector2( -0.054, 0.076 )
texture = ExtResource( 3 )

[node name="EditButton" type="TextureButton" parent="."]
margin_left = 20.1403
margin_top = -42.5561
margin_right = 40.1403
margin_bottom = -22.5561
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditPopup" type="WindowDialog" parent="."]
visible = true
margin_left = 62.0
margin_top = -4.0
margin_right = 303.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditPopup"]
margin_left = 10.1472
margin_top = 11.3855
margin_right = 50.1472
margin_bottom = 25.3855
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="LineEdit" parent="EditPopup"]
margin_left = 58.0
margin_top = 6.0
margin_right = 231.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveChangesButt" type="Button" parent="EditPopup"]
margin_left = 58.0541
margin_top = 119.0
margin_right = 169.054
margin_bottom = 139.0
text = "Save Changes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButt" type="Button" parent="EditPopup"]
margin_left = 57.8092
margin_top = 151.372
margin_right = 168.809
margin_bottom = 171.372
text = "Delete"

[node name="ActionLabel" type="Label" parent="EditPopup"]
margin_left = 10.1022
margin_top = 46.021
margin_right = 51.1022
margin_bottom = 60.021
text = "Action"

[node name="ActionScroll" type="OptionButton" parent="EditPopup"]
margin_left = 60.0
margin_top = 44.0
margin_right = 229.0
margin_bottom = 64.0

[node name="Label2" type="Label" parent="EditPopup"]
margin_left = 26.9391
margin_top = 80.8173
margin_right = 66.9391
margin_bottom = 94.8173
text = "Arg"

[node name="ArgumentText" type="LineEdit" parent="EditPopup"]
margin_left = 60.0
margin_top = 76.0
margin_right = 229.0
margin_bottom = 100.0

[node name="PopupPos" type="Position2D" parent="."]
position = Vector2( 50.7813, -37.8632 )
__meta__ = {
"_gizmo_extents_": 75.8
}

[connection signal="input_event" from="." to="." method="_on_Transition_input_event"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="EditPopup/SaveChangesButt" to="." method="_on_SaveChangesButt_pressed"]
[connection signal="pressed" from="EditPopup/DeleteButt" to="." method="_on_DeleteButt_pressed"]
[connection signal="item_selected" from="EditPopup/ActionScroll" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="EditPopup/ActionScroll" to="." method="_on_OptionButton_toggled"]
